# pipestatus

./: .gitignore  CMakeLists.txt  README.md  build.sh  pipestatus
Example/: example  launch-bar  launch-bar-dwm  launch-lemonbar
OLD/: README.md  pipestatus
OLD/Example/: example  launch-bar-dwm
modules/: PIPESTATUS_ALSA  PIPESTATUS_BAT  PIPESTATUS_DATE  PIPESTATUS_DESKTOPS  PIPESTATUS_LIGHT  PIPESTATUS_NET_SPEED  PIPESTATUS_PLAYERCTL  PIPESTATUS_PLAYERCTL_CMUS  PIPESTATUS_PULSE  PIPESTATUS_TEMP  PIPESTATUS_TIME  PIPESTATUS_TOP  PIPESTATUS_TRAYER  load
src/: Main.cpp  deps.h  parser.cpp
